Refactor KeyLoader to use ClassPathResource for loading keys and update TokenizationController by removing unused constructor