@@ -1,18 +1,21 @@
 package com.spring.security.services;
 
+import org.springframework.core.io.ClassPathResource;
+import java.nio.charset.StandardCharsets;
 import java.security.KeyFactory;
 import java.security.PrivateKey;
 import java.security.PublicKey;
 import java.security.spec.PKCS8EncodedKeySpec;
 import java.security.spec.X509EncodedKeySpec;
 import java.util.Base64;
-import java.nio.file.Files;
-import java.nio.file.Paths;
 
 public class KeyLoader {
 
+    private KeyLoader(){}
+
     public static PrivateKey loadPrivateKey(String filename) throws Exception {
-        String key = new String(Files.readAllBytes(Paths.get(filename)))
+        ClassPathResource resource = new ClassPathResource(filename);
+        String key = new String(resource.getInputStream().readAllBytes(), StandardCharsets.UTF_8)
                 .replace("-----BEGIN PRIVATE KEY-----", "")
                 .replace("-----END PRIVATE KEY-----", "")
                 .replaceAll("\\s+", ""); // remove all line breaks
@@ -23,7 +26,8 @@ public class KeyLoader {
     }
 
     public static PublicKey loadPublicKey(String filename) throws Exception {
-        String key = new String(Files.readAllBytes(Paths.get(filename)))
+        ClassPathResource resource = new ClassPathResource(filename);
+        String key = new String(resource.getInputStream().readAllBytes(), StandardCharsets.UTF_8)
                 .replace("-----BEGIN PUBLIC KEY-----", "")
                 .replace("-----END PUBLIC KEY-----", "")
                 .replaceAll("\\s+", "");
